[package]
name = "rtlsdr_iq"
version = "0.1.0"
authors = ["Mick Koch <mick@kochm.co>"]
description = "I/Q complex sample lookup table for RTL-SDR"
license = "MIT"
documentation = "https://docs.rs/rtlsdr_iq"
repository = "https://github.com/kchmck/rtlsdr_iq.rs"
keywords = ["rtl-sdr", "rtlsdr", "iq", "samples", "complex"]

[dependencies]
num = "0.1.34"
